# AQuA-QE

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  Makefile  README-pt.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
accessibility/: contracts.py
accessibility/application/: analyze.py  handlers.py
accessibility/domain/: entities.py  services.py  wcag_catalog.py
accessibility/infrastructure/: models.py  repository.py
ai_gateway/: acl.py  contracts.py
ai_gateway/infrastructure/: claude_adapter.py  models.py  openai_adapter.py  router.py
api/requirements/: router.py  schemas.py
docs/: ARCHITECTURE.md
knowledge/: acl.py  contracts.py
knowledge/application/: handlers.py
knowledge/domain/: entities.py  services.py
knowledge/infrastructure/: models.py  repository.py
migrations/: env.py
persistence/: base.py
quality/: contracts.py
quality/application/: evaluate.py  handlers.py
quality/domain/: entities.py  scorer.py  services.py
quality/infrastructure/: models.py  repository.py
requirements/application/: approve.py  create.py  refine.py
requirements/contracts/: events.py  i_requirement_reader.py  requirement_snapshot.py  value_objects.py
requirements/domain/: entities.py  value_objects.py
requirements/infrastructure/: mappers.py  models.py  reader.py  repository.py
shared/: event_bus.py  wiring.py
test/: test.robot
testing/: contracts.py
testing/domain/: entities.py  (+2 more)
tests/: conftest.py
traceability/: contracts.py
validation/: contracts.py
(+21 files in other folders)
